--- a/element/Styles.css
+++ b/element/Styles.css
@@ -1,1 +1,9 @@
-
+        
+        h1 {
+            color: rgb(214, 183, 28);
+        }  
+        
+        body {
+            background-color: rgb(252, 240, 114);
+        }
+            
